Fix map overflow on zoom

--- a/app/assets/stylesheets/_theme.scss
+++ b/app/assets/stylesheets/_theme.scss
@@ -1,9 +1,7 @@
 .vis-container {
-  margin-right: 40px;
+  margin-left: 10px !important; 
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 30px;
   overflow: hidden;
-}
-
-#map-vis {
-  position: absolute;
-  left: -25px;
 }
